# SISRI-ETL

./: .env  .gitignore  AGENTS.md  README.md  SISRI.sql  check_date_columns.py  check_transformation_rules.py  config.yaml  current-db-structure.sql  debug_archive_sk.py  debug_brands_mapping.py  debug_brands_pk.py  debug_brands_pk_structure.py  debug_brands_structure.py  debug_file_search.py  debug_mapping_structure.py  debug_original_file.py  debug_products.py  debug_temp_bytes.py  fixed_merge_procedure.sql  fixed_merge_procedure_parametrized.sql  main.py  principals.fmt  pyproject.toml  requirements.txt  smoke_test_sk_flow.py  step1_dynamic_sql_builder.py  step1_metadata_analysis.py  step2_clean_procedure_design.py  step2_clean_procedure_design.sql  step2_dynamic_merge_builder.py  step2_sales_format_1_merge.sql  step3_enhanced_procedure.py  step3_multi_source_procedure.py  step3_multi_source_procedure.sql  step4_apply_and_test.py  test_fresh_bcp.py  test_manual_bcp.py  test_proper_bcp.py  test_quoting.py  (+8 more)
config/: config.yaml  etl_config.xlsx
docs/: Adding-New-Sources-Guide.md  Admin-Instruction-Manual.md  App-Structure-Guide.md  Check-In-Checklist.md  Conformed-Staging-Testing-Plan.md  Debug-Files-Analysis.md  Documentation-Summary.md  Fact-Engine-Roadmap.md  Kimball-Fact-Engine-Plan.md  Naming-Conventions-Standards.md  Next-Steps-Plan.md  Release-Notes-v1.0.md  Risk-Analysis.md  System-Architecture.md  Technical-Overview.md  chat-archive.md  decisions.md
format/: places.fmt
rejected/: Brands_rejected.csv  Brands_rejected.txt  Places_rejected.csv  (+8 more)
src/: config.py  (+2 more)
(+86 files in other folders)
